- Updated my front page. - Shifted some things around and attempted to fix some links. - Adjusted colors and added latest certificate. - Added some projects that are featured in my GitHub README

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html{
     background: black;
-    color: #008F11;
+    color: #39FF14;
     font-family: "VT323", serif;
 }
 
 #intro, #projects, #certs{
-    text-align: center;
+    text-align: center; 
     margin-bottom: 50px;
     /* background: white; */
 }
@@ -48,10 +48,13 @@ p {
 }
 
 a{
-    color:#008F11;
+    color:#39FF14;
+}
+
+a:hover{
+    color: #008F11;
 }
 
 footer{
     text-align: center;
 }
-/* General Tags */
